Add some css properties and add a thumbnail

--- a/youtube.html
+++ b/youtube.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>YouTube</title>
-	<link rel="icon" type="image/x-icon" href="images/youtube logo.png"
+	<link rel="stylesheet" href="youtube.css">
+	<link rel="icon" type="image/x-icon" href="images/youtube logo.png">
 </head>
 <body>
-	
+	<img class="thumbnail" src="images/thumbnails/thumbnail-1.webp">
+	<input class="search-bar" type="text" placeholder="Search
+	">
 </body>
 </html>
