--- a/youtube.html
+++ b/youtube.html
@@ -8,8 +8,17 @@
 	<link rel="icon" type="image/x-icon" href="images/youtube logo.png">
 </head>
 <body>
+	<input class="search-bar" type="text" placeholder="Search">
 	<img class="thumbnail" src="images/thumbnails/thumbnail-1.webp">
-	<input class="search-bar" type="text" placeholder="Search
-	">
+	
+	<p class="video-title">
+		Talking Tech and AI with Google CEO Sundar Pichai!
+	</p>
+	<p class="video-author">
+		Marques Brownlee
+	</p>
+	<p class="video-stats">
+		3.4M views · 6 months ago
+	</p>
 </body>
 </html>
