Make the layout nested -horizontal and vertical

--- a/youtube.html
+++ b/youtube.html
@@ -4,6 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>YouTube</title>
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
 	<link rel="stylesheet" href="youtube.css">
 	<link rel="icon" type="image/x-icon" href="images/youtube logo.png">
 </head>
@@ -11,29 +16,47 @@
 	<input class="search-bar" type="text" placeholder="Search">
 
 	<div class="video-preview">
-		<img class="thumbnail" src="images/thumbnails/thumbnail-1.webp">
-		<p class="video-title">
-			Talking Tech and AI with Google CEO Sundar Pichai!
-		</p>
-		<p class="video-author">
-			Marques Brownlee
-		</p>
-		<p class="video-stats">
-			3.4M views &#183 6 months ago
-		</p>
+		<div class="thumbnail-row">
+			<img class="thumbnail" src="images/thumbnails/thumbnail-1.webp">
+		</div>
+		<div>
+			<div class="channel-picture">
+				<img class="profile-picture" src="images/channel/channel-1.jpeg">
+			</div>
+			<div class="video-info">
+			<p class="video-title">
+				Talking Tech and AI with Google CEO Sundar Pichai!
+			</p>
+			<p class="video-author">
+				Marques Brownlee
+			</p>
+			<p class="video-stats">
+				3.4M views &#183 6 months ago
+			</p>
+			</div>
+		</div>
 	</div>
 
 	<div class="video-preview">
-		<img class="thumbnail" src="images/thumbnails/thumbnail-2.webp">
-		<p class="video-title">
-			Try Not To Laugh Challenge #9
-		</p>
-		<p class="video-author">
-			Markiplier
-		</p>
-		<p class="video-stats">
-			19M views &#183 4 years ago
-		</p>
+		<div class="thumbnail-row">
+			<img class="thumbnail" src="images/thumbnails/thumbnail-2.webp">
+		</div>
+		<div>
+			<div class="channel-picture">
+				<img class="profile-picture" src="images/channel/channel-2.jpeg">
+			</div>
+			<div class="video-info">
+				<p class="video-title">
+					Try Not To Laugh Challenge #9
+				</p>
+				<p class="video-author">
+					Markiplier
+				</p>
+				<p class="video-stats">
+					19M views &#183 4 years ago
+				</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
