--- a/youtube.html
+++ b/youtube.html
@@ -15,48 +15,162 @@
 <body>
 	<input class="search-bar" type="text" placeholder="Search">
 
-	<div class="video-preview">
-		<div class="thumbnail-row">
-			<img class="thumbnail" src="images/thumbnails/thumbnail-1.webp">
-		</div>
-		<div>
-			<div class="channel-picture">
-				<img class="profile-picture" src="images/channel/channel-1.jpeg">
+	<div class="video-grid">
+		<div class="video-preview">
+			<div class="thumbnail-row">
+				<img class="thumbnail" src="images/thumbnails/thumbnail-1.webp">
 			</div>
-			<div class="video-info">
-			<p class="video-title">
-				Talking Tech and AI with Google CEO Sundar Pichai!
-			</p>
-			<p class="video-author">
-				Marques Brownlee
-			</p>
-			<p class="video-stats">
-				3.4M views &#183 6 months ago
-			</p>
-			</div>
-		</div>
-	</div>
-
-	<div class="video-preview">
-		<div class="thumbnail-row">
-			<img class="thumbnail" src="images/thumbnails/thumbnail-2.webp">
-		</div>
-		<div>
-			<div class="channel-picture">
-				<img class="profile-picture" src="images/channel/channel-2.jpeg">
-			</div>
-			<div class="video-info">
+			<div class="video-info-grid">
+				<div class="channel-picture">
+					<img class="profile-picture" src="images/channel/channel-1.jpeg">
+				</div>
+				<div class="video-info">
 				<p class="video-title">
-					Try Not To Laugh Challenge #9
+					Talking Tech and AI with Google CEO Sundar Pichai!
 				</p>
 				<p class="video-author">
-					Markiplier
+					Marques Brownlee
 				</p>
 				<p class="video-stats">
-					19M views &#183 4 years ago
+					3.4M views &#183 6 months ago
 				</p>
+				</div>
+			</div>
+		</div>
+	
+		<div class="video-preview">
+			<div class="thumbnail-row">
+				<img class="thumbnail" src="images/thumbnails/thumbnail-2.webp">
+			</div>
+			<div class="video-info-grid">
+				<div class="channel-picture">
+					<img class="profile-picture" src="images/channel/channel-2.jpeg">
+				</div>
+				<div class="video-info">
+					<p class="video-title">
+						Try Not To Laugh Challenge #9
+					</p>
+					<p class="video-author">
+						Markiplier
+					</p>
+					<p class="video-stats">
+						19M views &#183 4 years ago
+					</p>
+				</div>
+			</div>
+		</div>
+	
+		<div class="video-preview">
+			<div class="thumbnail-row">
+				<img class="thumbnail" src="images/thumbnails/thumbnail-3.webp">
+			</div>
+			<div class="video-info-grid">
+				<div class="channel-picture">
+					<img class="profile-picture" src="images/channel/channel-3.jpeg">
+				</div>
+				<div class="video-info">
+				<p class="video-title">
+					Crazy Tik Toks Taken Moments Before DISASTER
+				</p>
+				<p class="video-author">
+					SSSniperWolf
+				</p>
+				<p class="video-stats">
+					12M views &#183 1 year ago
+				</p>
+				</div>
+			</div>
+		</div>
+	
+		<div class="video-preview">
+			<div class="thumbnail-row">
+				<img class="thumbnail" src="images/thumbnails/thumbnail-4.webp">
+			</div>
+			<div class="video-info-grid">
+				<div class="channel-picture">
+					<img class="profile-picture" src="images/channel/channel-4.jpeg">
+				</div>
+				<div class="video-info">
+					<p class="video-title">
+						The Simplest Math Problem No One Can Solve - Collatz Conjecture
+					</p>
+					<p class="video-author">
+						Veritasium
+					</p>
+					<p class="video-stats">
+						18M views &#183 4 months ago
+					</p>
+				</div>
+			</div>
+		</div>
+	
+		<div class="video-preview">
+			<div class="thumbnail-row">
+				<img class="thumbnail" src="images/thumbnails/thumbnail-5.webp">
+			</div>
+			<div class="video-info-grid">
+				<div class="channel-picture">
+					<img class="profile-picture" src="images/channel/channel-5.jpeg">
+				</div>
+				<div class="video-info">
+				<p class="video-title">
+					Kadane's Algorithm to Maximum Sum Subarray Problem
+				</p>
+				<p class="video-author">
+					CS Dojo
+				</p>
+				<p class="video-stats">
+					519K views &#183 5 years ago
+				</p>
+				</div>
+			</div>
+		</div>
+	
+		<div class="video-preview">
+			<div class="thumbnail-row">
+				<img class="thumbnail" src="images/thumbnails/thumbnail-6.webp">
+			</div>
+			<div class="video-info-grid">
+				<div class="channel-picture">
+					<img class="profile-picture" src="images/channel/channel-6.jpeg">
+				</div>
+				<div class="video-info">
+					<p class="video-title">
+						Anything You Can Fit In The Circle I’ll Pay For
+					</p>
+					<p class="video-author">
+						MrBeast
+					</p>
+					<p class="video-stats">
+						141M views &#183 1 years ago
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="video-preview">
+			<div class="thumbnail-row">
+				<img class="thumbnail" src="images/thumbnails/thumbnail-7.webp">
+			</div>
+			<div class="video-info-grid">
+				<div class="channel-picture">
+					<img class="profile-picture" src="images/channel/channel-7.jpeg">
+				</div>
+				<div class="video-info">
+					<p class="video-title">
+						The Hori Household being as CHAOTIC as ever
+					</p>
+					<p class="video-author">
+						Shin Akiwa
+					</p>
+					<!-- <a href="https://youtu.be/NyBzs6i6lCo?si=jmXsSJgGRDkhigIT"></a> -->
+					<p class="video-stats">
+						99k views &#183 1 years ago
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>
+	
 </body>
 </html>
