--- a/youtube.html
+++ b/youtube.html
@@ -9,11 +9,26 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="youtube.css">
+	<link rel="stylesheet" href="styles/general.css">
+	<link rel="stylesheet" href="styles/header.css">
+	<link rel="stylesheet" href="styles/video.css">
 	<link rel="icon" type="image/x-icon" href="images/youtube logo.png">
 </head>
 <body>
-	<input class="search-bar" type="text" placeholder="Search">
+	<!-- header -->
+	<div class="header">
+		<div class="left-section">
+			left section
+		</div>
+		<div class="middle-section">
+			<input class="search-bar" type="text" placeholder="Search">
+		</div>
+		<div class="right-section">
+			right section
+		</div>
+		
+	</div>
+	
 
 	<div class="video-grid">
 		<div class="video-preview">
