--- a/youtube.html
+++ b/youtube.html
@@ -11,6 +11,7 @@
 
 	<link rel="stylesheet" href="styles/general.css">
 	<link rel="stylesheet" href="styles/header.css">
+	<link rel="stylesheet" href="styles/sidebar.css">
 	<link rel="stylesheet" href="styles/video.css">
 	<link rel="icon" type="image/x-icon" href="images/youtube logo.png">
 </head>
@@ -38,6 +39,9 @@
 		</div>
 	</div>
 	
+	<div class="sidebar">
+		sidebar
+	</div>
 
 	<div class="video-grid">
 		<div class="video-preview">
