Use the Position absolute and relative to make time in videos

--- a/youtube.html
+++ b/youtube.html
@@ -34,7 +34,10 @@
 		<div class="right-section">
 			<img class="upload-icon" src="images/icons/upload.svg">
 			<img class="youtube-apps-icon" src="images/icons/youtube-apps.svg">
-			<img class="notifications-icon" src="images/icons/notifications.svg">
+			<div class="notifications-icon-container">
+				<img class="notifications-icon" src="images/icons/notifications.svg">
+				<div class="notifications-count">3</div>
+			</div>
 			<img class="current-user-picture" src="images/channel/Luffy.png">
 		</div>
 	</div>
@@ -47,6 +50,7 @@
 		<div class="video-preview">
 			<div class="thumbnail-row">
 				<img class="thumbnail" src="images/thumbnails/thumbnail-1.webp">
+				<div class="video-time">14:20</div>
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
@@ -69,6 +73,7 @@
 		<div class="video-preview">
 			<div class="thumbnail-row">
 				<img class="thumbnail" src="images/thumbnails/thumbnail-2.webp">
+				<div class="video-time">8:22</div>
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
@@ -91,6 +96,7 @@
 		<div class="video-preview">
 			<div class="thumbnail-row">
 				<img class="thumbnail" src="images/thumbnails/thumbnail-3.webp">
+				<div class="video-time">9:13</div>
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
@@ -113,6 +119,7 @@
 		<div class="video-preview">
 			<div class="thumbnail-row">
 				<img class="thumbnail" src="images/thumbnails/thumbnail-4.webp">
+				<div class="video-time">22:09</div>
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
@@ -135,6 +142,7 @@
 		<div class="video-preview">
 			<div class="thumbnail-row">
 				<img class="thumbnail" src="images/thumbnails/thumbnail-5.webp">
+				<div class="video-time">11:17</div>
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
@@ -157,6 +165,7 @@
 		<div class="video-preview">
 			<div class="thumbnail-row">
 				<img class="thumbnail" src="images/thumbnails/thumbnail-6.webp">
+				<div class="video-time">19:59</div>
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
@@ -175,10 +184,12 @@
 				</div>
 			</div>
 		</div>
-
+	
 		<div class="video-preview">
 			<div class="thumbnail-row">
 				<img class="thumbnail" src="images/thumbnails/thumbnail-7.webp">
+				<div class="video-time">1:29</div>
+				<!-- <a href="https://youtu.be/NyBzs6i6lCo?si=jmXsSJgGRDkhigIT"></a> -->
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
@@ -191,14 +202,12 @@
 					<p class="video-author">
 						Shin Akiwa
 					</p>
-					<!-- <a href="https://youtu.be/NyBzs6i6lCo?si=jmXsSJgGRDkhigIT"></a> -->
 					<p class="video-stats">
 						99k views &#183 1 years ago
 					</p>
 				</div>
 			</div>
 		</div>
-	</div>
 	
 </body>
 </html>
