--- a/youtube.html
+++ b/youtube.html
@@ -26,24 +26,56 @@
 			<input class="search-bar" type="text" placeholder="Search">
 			<button class="search-button">
 				<img class="search-icon" src="images/icons/search.svg">
+				<div class="tooltip">Search</div>
 			</button>
 			<button class="voice-search-button">
 				<img class="voice-search-icon" src="images/icons/voice-search-icon.svg">
+				<div class="tooltip">Search with your voice</div>
 			</button>
 		</div>
 		<div class="right-section">
-			<img class="upload-icon" src="images/icons/upload.svg">
-			<img class="youtube-apps-icon" src="images/icons/youtube-apps.svg">
+			<div class="upload-icon-container">
+				<img class="upload-icon" src="images/icons/upload.svg">
+				<div class="tooltip">Create</div>
+			</div>
+			<div class="youtube-apps-icon-container">
+				<img class="youtube-apps-icon" src="images/icons/youtube-apps.svg">
+				<div class="tooltip">YouTube apps</div>
+			</div>
 			<div class="notifications-icon-container">
 				<img class="notifications-icon" src="images/icons/notifications.svg">
 				<div class="notifications-count">3</div>
+				<div class="tooltip">Notifications</div>
 			</div>
 			<img class="current-user-picture" src="images/channel/Luffy.png">
 		</div>
 	</div>
 	
 	<div class="sidebar">
-		sidebar
+		<div class="sidebar-link">
+			<img src="images/icons/home.svg">
+			<div>Home</div>
+		</div>
+		<div class="sidebar-link">
+			<img src="images/icons/explore.svg">
+			<div>Explore</div>
+		</div>
+		<div class="sidebar-link">
+			<img src="images/icons/subscriptions.svg">
+			<div>Subscriptions</div>
+		</div>
+		<div class="sidebar-link">
+			<img src="images/icons/originals.svg">
+			<div>Originals</div>
+		</div>
+		<div class="sidebar-link">
+			<img src="images/icons/youtube-music.svg">
+			<div>YuTube Music</div>
+		</div>
+		<div class="sidebar-link">
+			<img src="images/icons/library.svg">
+			<div>Library</div>
+		</div>
 	</div>
 
 	<div class="video-grid">
