--- a/youtube.html
+++ b/youtube.html
@@ -89,9 +89,11 @@
 					<img class="profile-picture" src="images/channel/channel-1.jpeg">
 				</div>
 				<div class="video-info">
-				<p class="video-title">
-					Talking Tech and AI with Google CEO Sundar Pichai!
-				</p>
+					<a href= "https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+						<p class="video-title">
+							Talking Tech and AI with Google CEO Sundar Pichai!
+						</p>
+					</a>
 				<p class="video-author">
 					Marques Brownlee
 				</p>
@@ -112,9 +114,11 @@
 					<img class="profile-picture" src="images/channel/channel-2.jpeg">
 				</div>
 				<div class="video-info">
-					<p class="video-title">
-						Try Not To Laugh Challenge #9
-					</p>
+					<a href="https://www.youtube.com/watch?v=mP0RAo9SKZk"target="_blank" class="video-title-link">
+						<p class="video-title">
+							Try Not To Laugh Challenge #9
+						</p>
+					</a>
 					<p class="video-author">
 						Markiplier
 					</p>
@@ -135,9 +139,11 @@
 					<img class="profile-picture" src="images/channel/channel-3.jpeg">
 				</div>
 				<div class="video-info">
-				<p class="video-title">
-					Crazy Tik Toks Taken Moments Before DISASTER
-				</p>
+					<a href="https://www.youtube.com/watch?v=FgjPQQeTh1w"target="_blank" class="video-title-link">
+						<p class="video-title">
+							Crazy Tik Toks Taken Moments Before DISASTER
+						</p>
+					</a>
 				<p class="video-author">
 					SSSniperWolf
 				</p>
@@ -158,9 +164,11 @@
 					<img class="profile-picture" src="images/channel/channel-4.jpeg">
 				</div>
 				<div class="video-info">
-					<p class="video-title">
-						The Simplest Math Problem No One Can Solve - Collatz Conjecture
-					</p>
+					<a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
+						<p class="video-title">
+							The Simplest Math Problem No One Can Solve - Collatz Conjecture
+						</p>
+					</a>
 					<p class="video-author">
 						Veritasium
 					</p>
@@ -181,9 +189,11 @@
 					<img class="profile-picture" src="images/channel/channel-5.jpeg">
 				</div>
 				<div class="video-info">
-				<p class="video-title">
-					Kadane's Algorithm to Maximum Sum Subarray Problem
-				</p>
+					<a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank" class="video-title-link">
+						<p class="video-title">
+							Kadane's Algorithm to Maximum Sum Subarray Problem
+						</p>
+					</a>
 				<p class="video-author">
 					CS Dojo
 				</p>
@@ -204,9 +214,11 @@
 					<img class="profile-picture" src="images/channel/channel-6.jpeg">
 				</div>
 				<div class="video-info">
-					<p class="video-title">
-						Anything You Can Fit In The Circle I’ll Pay For
-					</p>
+					<a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank" class="video-title-link">
+						<p class="video-title">
+							Anything You Can Fit In The Circle I’ll Pay For
+						</p>
+					</a>
 					<p class="video-author">
 						MrBeast
 					</p>
@@ -221,16 +233,17 @@
 			<div class="thumbnail-row">
 				<img class="thumbnail" src="images/thumbnails/thumbnail-7.webp">
 				<div class="video-time">1:29</div>
-				<!-- <a href="https://youtu.be/NyBzs6i6lCo?si=jmXsSJgGRDkhigIT"></a> -->
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
 					<img class="profile-picture" src="images/channel/channel-7.jpeg">
 				</div>
 				<div class="video-info">
-					<p class="video-title">
-						The Hori Household being as CHAOTIC as ever
-					</p>
+					<a href="https://youtu.be/NyBzs6i6lCo?si=jmXsSJgGRDkhigIT" target="_blank" class="video-title-link">
+						<p class="video-title">
+							The Hori Household being as CHAOTIC as ever
+						</p>
+					</a>
 					<p class="video-author">
 						Shin Akiwa
 					</p>
