Attach the video link to the thumbnail

--- a/youtube.html
+++ b/youtube.html
@@ -50,7 +50,7 @@
 			<img class="current-user-picture" src="images/channel/Luffy.png">
 		</div>
 	</div>
-	
+	<!-- sidebar -->
 	<div class="sidebar">
 		<div class="sidebar-link">
 			<img src="images/icons/home.svg">
@@ -77,11 +77,13 @@
 			<div>Library</div>
 		</div>
 	</div>
-
+	<!-- videos -->
 	<div class="video-grid">
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-1.webp">
+				<a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-1.webp">
+				</a>
 				<div class="video-time">14:20</div>
 			</div>
 			<div class="video-info-grid">
@@ -106,7 +108,9 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-2.webp">
+				<a href="https://www.youtube.com/watch?v=mP0RAo9SKZk"target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-2.webp">
+				</a>
 				<div class="video-time">8:22</div>
 			</div>
 			<div class="video-info-grid">
@@ -131,7 +135,9 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-3.webp">
+				<a href="https://www.youtube.com/watch?v=FgjPQQeTh1w" target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-3.webp">
+				</a>
 				<div class="video-time">9:13</div>
 			</div>
 			<div class="video-info-grid">
@@ -139,7 +145,7 @@
 					<img class="profile-picture" src="images/channel/channel-3.jpeg">
 				</div>
 				<div class="video-info">
-					<a href="https://www.youtube.com/watch?v=FgjPQQeTh1w"target="_blank" class="video-title-link">
+					<a href="https://www.youtube.com/watch?v=FgjPQQeTh1w" target="_blank" class="video-title-link">
 						<p class="video-title">
 							Crazy Tik Toks Taken Moments Before DISASTER
 						</p>
@@ -156,7 +162,9 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-4.webp">
+				<a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-4.webp">
+				</a>
 				<div class="video-time">22:09</div>
 			</div>
 			<div class="video-info-grid">
@@ -181,7 +189,9 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-5.webp">
+				<a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-5.webp">
+				</a>
 				<div class="video-time">11:17</div>
 			</div>
 			<div class="video-info-grid">
@@ -206,7 +216,9 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-6.webp">
+				<a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-6.webp">
+				</a>
 				<div class="video-time">19:59</div>
 			</div>
 			<div class="video-info-grid">
@@ -231,7 +243,7 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-7.webp">
+				<a href="https://youtu.be/NyBzs6i6lCo?si=jmXsSJgGRDkhigIT" target="_blank" class="video-title-link"><img class="thumbnail" src="images/thumbnails/thumbnail-7.webp"></a>
 				<div class="video-time">1:29</div>
 			</div>
 			<div class="video-info-grid">
@@ -256,7 +268,7 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-8.avif">
+				<a href="https://youtu.be/KigR4MQUxE8?si=PYA22i61UrQ42RtH" target="_blank" class="video-title-link"><img class="thumbnail" src="images/thumbnails/thumbnail-8.avif"></a>
 				<div class="video-time">3:49</div>
 			</div>
 			<div class="video-info-grid">
@@ -281,7 +293,9 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-9.avif">
+				<a href="https://youtu.be/6pxkKf_yK28?si=nJdkDta36A0BLwee " target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-9.avif">
+				</a>
 				<div class="video-time">2:00</div>
 			</div>
 			<div class="video-info-grid">
@@ -306,7 +320,9 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-10.avif">
+				<a href="https://youtu.be/Q2qAC_eqKeY?si=g7YoICE2hTOcPvXJ" target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-10.avif">
+				</a>
 				<div class="video-time">3:33</div>
 			</div>
 			<div class="video-info-grid">
@@ -331,7 +347,9 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-11.avif">
+				<a href="https://youtu.be/fyp0TheyJAA?si=AtHz1zmiQzKa6ys_" target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-11.avif">
+				</a>
 				<div class="video-time">4:10</div>
 			</div>
 			<div class="video-info-grid">
@@ -356,7 +374,9 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<img class="thumbnail" src="images/thumbnails/thumbnail-12.avif">
+				<a href="https://youtu.be/UQMt-xhblrA?si=JYcD2aTbrIGd4svZ" target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-12.avif">
+				</a>
 				<div class="video-time">1:46</div>
 			</div>
 			<div class="video-info-grid">
