Add some formatting

--- a/youtube.html
+++ b/youtube.html
@@ -81,7 +81,9 @@
 	<div class="video-grid">
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<a href="https://youtu.be/NyBzs6i6lCo?si=jmXsSJgGRDkhigIT" target="_blank" class="video-title-link"><img class="thumbnail" src="images/thumbnails/thumbnail-7.webp"></a>
+				<a href="https://youtu.be/NyBzs6i6lCo?si=jmXsSJgGRDkhigIT" target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-7.webp">
+				</a>
 				<div class="video-time">1:29</div>
 			</div>
 			<div class="video-info-grid">
@@ -106,7 +108,9 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<a href="https://youtu.be/KigR4MQUxE8?si=PYA22i61UrQ42RtH" target="_blank" class="video-title-link"><img class="thumbnail" src="images/thumbnails/thumbnail-8.avif"></a>
+				<a href="https://youtu.be/KigR4MQUxE8?si=PYA22i61UrQ42RtH" target="_blank" class="video-title-link">
+					<img class="thumbnail" src="images/thumbnails/thumbnail-8.avif">
+				</a>
 				<div class="video-time">3:49</div>
 			</div>
 			<div class="video-info-grid">
