Add a tooltip which shows the channel details

--- a/youtube.html
+++ b/youtube.html
@@ -88,7 +88,22 @@
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-7.jpeg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@ShinAkiwa" target="_blank">
+							<img class="profile-picture" src="images/channel/channel-7.jpeg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-7.jpeg">
+							<div>
+								<div class="channel-tooltip-name">
+									Shin Akiwa
+								</div>
+								<div class="channel-tooltip-stats">
+									3.11K subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
 					<a href="https://youtu.be/NyBzs6i6lCo?si=jmXsSJgGRDkhigIT" target="_blank" class="video-title-link">
@@ -108,17 +123,32 @@
 	
 		<div class="video-preview">
 			<div class="thumbnail-row">
-				<a href="https://youtu.be/KigR4MQUxE8?si=PYA22i61UrQ42RtH" target="_blank" class="video-title-link">
+				<a href="https://youtu.be/JsMFMC-iNh0?si=xG804ee60B44PKSc" target="_blank" class="video-title-link">
 					<img class="thumbnail" src="images/thumbnails/thumbnail-8.avif">
 				</a>
 				<div class="video-time">3:49</div>
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-8.jpg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@KaanPhodMusic">
+							<img class="profile-picture" src="images/channel/channel-8.jpg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-8.jpg">
+							<div>
+								<div class="channel-tooltip-name">
+									KaanPhod Music
+								</div>
+								<div class="channel-tooltip-stats">
+									8.92M subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
-					<a href="https://youtu.be/KigR4MQUxE8?si=PYA22i61UrQ42RtH" target="_blank" class="video-title-link">
+					<a href="https://youtu.be/JsMFMC-iNh0?si=xG804ee60B44PKSc" target="_blank" class="video-title-link">
 						<p class="video-title">
 							PYAAR? | Naam Sujal | MTV Hustle 4 @NaamSujal
 						</p>
@@ -142,7 +172,22 @@
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-9.jpg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@ultrainstinctgodx1413" target="_blank">
+							<img class="profile-picture" src="images/channel/channel-9.jpg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-9.jpg">
+							<div>
+								<div class="channel-tooltip-name">
+									ultra instinct god x
+								</div>
+								<div class="channel-tooltip-stats">
+									855 subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
 					<a href="https://youtu.be/6pxkKf_yK28?si=nJdkDta36A0BLwee" target="_blank" class="video-title-link">
@@ -151,7 +196,7 @@
 						</p>
 					</a>
 					<p class="video-author">
-						KaanPhod Music
+						ultra instinct god x
 					</p>
 					<p class="video-stats">
 						50K views &#183 5 years ago
@@ -169,7 +214,22 @@
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-10.jpg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@AnimeFacts6" target="_blank">
+							<img class="profile-picture" src="images/channel/channel-10.jpg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-10.jpg">
+							<div>
+								<div class="channel-tooltip-name">
+									Anime Facts
+								</div>
+								<div class="channel-tooltip-stats">
+									13.6K subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
 					<a href="https://youtu.be/Q2qAC_eqKeY?si=g7YoICE2hTOcPvXJ" target="_blank" class="video-title-link">
@@ -196,7 +256,22 @@
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-11.jpg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@Neown10" target="_blank">
+							<img class="profile-picture" src="images/channel/channel-11.jpg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-11.jpg">
+							<div>
+								<div class="channel-tooltip-name">
+									Neown Editz
+								</div>
+								<div class="channel-tooltip-stats">
+									6.04K subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
 					<a href="https://youtu.be/fyp0TheyJAA?si=AtHz1zmiQzKa6ys_" target="_blank" class="video-title-link">
@@ -223,7 +298,22 @@
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-12.jpg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@bnxanime6574" target="_blank">
+							<img class="profile-picture" src="images/channel/channel-12.jpg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-12.jpg">
+							<div>
+								<div class="channel-tooltip-name">
+									BNx Anime
+								</div>
+								<div class="channel-tooltip-stats">
+									3.28K subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
 					<a href="https://youtu.be/UQMt-xhblrA?si=JYcD2aTbrIGd4svZ" target="_blank" class="video-title-link">
@@ -250,7 +340,22 @@
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-1.jpeg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@mkbhd" target="_blank">
+							<img class="profile-picture" src="images/channel/channel-1.jpeg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-1.jpeg">
+							<div>
+								<div class="channel-tooltip-name">
+									Marques Brownlee
+								</div>
+								<div class="channel-tooltip-stats">
+									19.8M subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
 					<a href= "https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank" class="video-title-link">
@@ -277,7 +382,22 @@
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-2.jpeg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@markiplier" target="_blank">
+							<img class="profile-picture" src="images/channel/channel-2.jpeg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-2.jpeg">
+							<div>
+								<div class="channel-tooltip-name">
+									Markiplier
+								</div>
+								<div class="channel-tooltip-stats">
+									37.3M subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
 					<a href="https://www.youtube.com/watch?v=mP0RAo9SKZk"target="_blank" class="video-title-link">
@@ -304,7 +424,22 @@
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-3.jpeg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@SSSniperWolf" target="_blank">
+							<img class="profile-picture" src="images/channel/channel-3.jpeg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-3.jpeg">
+							<div>
+								<div class="channel-tooltip-name">
+									SSSniperWolf
+								</div>
+								<div class="channel-tooltip-stats">
+									34.8M subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
 					<a href="https://www.youtube.com/watch?v=FgjPQQeTh1w" target="_blank" class="video-title-link">
@@ -331,7 +466,22 @@
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-4.jpeg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@veritasium" target="_blank">
+							<img class="profile-picture" src="images/channel/channel-4.jpeg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-4.jpeg">
+							<div>
+								<div class="channel-tooltip-name">
+									Veritasium
+								</div>
+								<div class="channel-tooltip-stats">
+									17.1M subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
 					<a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank" class="video-title-link">
@@ -358,7 +508,22 @@
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-5.jpeg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@CSDojo" target="_blank">
+							<img class="profile-picture" src="images/channel/channel-5.jpeg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-5.jpeg">
+							<div>
+								<div class="channel-tooltip-name">
+									CS Dojo
+								</div>
+								<div class="channel-tooltip-stats">
+									1.95M subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
 					<a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank" class="video-title-link">
@@ -385,7 +550,22 @@
 			</div>
 			<div class="video-info-grid">
 				<div class="channel-picture">
-					<img class="profile-picture" src="images/channel/channel-6.jpeg">
+					<div class="profile-picture-container">
+						<a href="https://www.youtube.com/@MrBeast" target="_blank">
+							<img class="profile-picture" src="images/channel/channel-6.jpeg">
+						</a>
+						<div class="channel-tooltip">
+							<img class="channel-tooltip-picture" src="images/channel/channel-6.jpeg">
+							<div>
+								<div class="channel-tooltip-name">
+									MrBeast
+								</div>
+								<div class="channel-tooltip-stats">
+									352M subscribers
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="video-info">
 					<a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank" class="video-title-link">
