--- a/youtube.html
+++ b/youtube.html
@@ -28,6 +28,7 @@
 				<img class="search-icon" src="images/icons/search.svg">
 				<div class="tooltip">Search</div>
 			</button>
+			<!-- Put position absolute inside position relative to create this tooltip -->
 			<button class="voice-search-button">
 				<img class="voice-search-icon" src="images/icons/voice-search-icon.svg">
 				<div class="tooltip">Search with your voice</div>
